deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-sample-service
  namespace: default
  labels:
    app: web-sample-app
spec:
  type: ClusterIP
  ports:
    - port: 80         # The port Traefik uses to talk to this Service
      targetPort: 80   # The internal port where Nginx is listening inside your container
      protocol: TCP
      name: http
  selector:
    app: web-sample-app # This MUST exactly match the labels on your Deployment pods
